--- a/date/2024-11/page-2.htm
+++ b/date/2024-11/page-2.htm
@@ -96,6 +96,20 @@
         <div class="col-md-9">
             <!-- welcome -->
             <div class="xcblog-blog-list">
+                                    <div class="welcome xcblog-blog-item" data-date="2024-11-11">
+                        <div class="col-md-3 agileits_welcome_grid_right">
+                            <a href="/free-nodes/2024-11-11-free-clash-subscribe.htm" class="xcblog-blog-url">
+                                <img src="/uploads/20240228/572cca27916877c289a949f8bee620b0.webp" alt="11月11日→18.6M/S|2024年最新免费节点V2ray/Clash/Shadowrocket/SSR订阅链接地址，便宜机场推荐" class="img-responsive" />
+                            </a>
+                        </div>
+                        <div class="col-md-9 agileits_welcome_grid_left">
+                            <a href="/free-nodes/2024-11-11-free-clash-subscribe.htm" class="xcblog-blog-url">
+                                <h3 class="xcblog-blog-title">11月11日→18.6M/S|2024年最新免费节点V2ray/Clash/Shadowrocket/SSR订阅链接地址，便宜机场推荐</h3>
+                            </a>
+                            <p>这一次的节点更新覆盖了韩国、日本、欧洲、加拿大、美国、新加坡、香港等地区,最高速度可达18.6 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</i></p>
+                        </div>
+                        <div class="clearfix"> </div>
+                    </div>
                                     <div class="welcome xcblog-blog-item" data-date="2024-11-10">
                         <div class="col-md-3 agileits_welcome_grid_right">
                             <a href="/free-nodes/2024-11-10-free-high-speed-nodes.htm" class="xcblog-blog-url">
@@ -222,22 +236,8 @@
                         </div>
                         <div class="clearfix"> </div>
                     </div>
-                                    <div class="welcome xcblog-blog-item" data-date="2024-11-01">
-                        <div class="col-md-3 agileits_welcome_grid_right">
-                            <a href="/free-nodes/2024-11-1-free-shadowrocket-node.htm" class="xcblog-blog-url">
-                                <img src="/uploads/20240228/462333cdd7156cdfce9b23a70ece7cac.webp" alt="11月1日→18.5M/S|2024年最新免费节点V2ray/Clash/Shadowrocket/SSR订阅链接地址，便宜机场推荐" class="img-responsive" />
-                            </a>
-                        </div>
-                        <div class="col-md-9 agileits_welcome_grid_left">
-                            <a href="/free-nodes/2024-11-1-free-shadowrocket-node.htm" class="xcblog-blog-url">
-                                <h3 class="xcblog-blog-title">11月1日→18.5M/S|2024年最新免费节点V2ray/Clash/Shadowrocket/SSR订阅链接地址，便宜机场推荐</h3>
-                            </a>
-                            <p>这一次的节点更新覆盖了香港、加拿大、韩国、新加坡、欧洲、美国、日本等地区,最高速度可达18.5 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</i></p>
-                        </div>
-                        <div class="clearfix"> </div>
-                    </div>
                             </div>
-            <ul class="pagination"><li><a href="/date/2024-11/">&laquo;</a></li> <li><a href="/date/2024-11/">1</a></li><li class="active"><span>2</span></li> <li class="disabled"><span>&raquo;</span></li></ul>            <!-- //welcome -->
+            <ul class="pagination"><li><a href="/date/2024-11/">&laquo;</a></li> <li><a href="/date/2024-11/">1</a></li><li class="active"><span>2</span></li><li><a href="/date/2024-11/page-3.htm">3</a></li> <li><a href="/date/2024-11/page-3.htm">&raquo;</a></li></ul>            <!-- //welcome -->
         </div>
         <div class="col-md-3">
             <div class="panel panel-default">
@@ -246,16 +246,16 @@
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
-                        <li class="py-2"><a href="/free-nodes/2024-9-2-free-shadowrocket-node.htm" title="9月2日→18.7M/S|2024年最新免费节点V2ray/Shadowrocket/Clash/SSR订阅链接地址">9月2日→18.7M/S|2024年最新免费节点V2ray/Shadowrocket/Clash/SSR订阅链接地址</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-4-3-shadowrocket-node.htm" title="4月3日→22.8M/S|2024年最新免费节点Clash/Shadowrocket/V2ray/SSR订阅链接">4月3日→22.8M/S|2024年最新免费节点Clash/Shadowrocket/V2ray/SSR订阅链接</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-6-13-clash-v2ray-ss-ssr.htm" title="6月13日→20M/S|2024年最新免费节点SSR/Shadowrocket/V2ray/Clash订阅链接地址">6月13日→20M/S|2024年最新免费节点SSR/Shadowrocket/V2ray/Clash订阅链接地址</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-9-14-free-subscribe-node.htm" title="9月14日→20.1M/S|2024年最新免费节点Clash/V2ray/Shadowrocket/SSR订阅链接地址">9月14日→20.1M/S|2024年最新免费节点Clash/V2ray/Shadowrocket/SSR订阅链接地址</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-6-7-free-v2ray.htm" title="6月7日→20.5M/S|2024年最新免费节点Shadowrocket/Clash/V2ray/SSR订阅链接地址">6月7日→20.5M/S|2024年最新免费节点Shadowrocket/Clash/V2ray/SSR订阅链接地址</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-5-18-clash-node.htm" title="5月18日→21.2M/S|2024年最新免费节点SSR/Clash/Shadowrocket/V2ray订阅链接地址">5月18日→21.2M/S|2024年最新免费节点SSR/Clash/Shadowrocket/V2ray订阅链接地址</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-8-7-free-v2ray.htm" title="8月7日→18.1M/S|2024年最新免费节点SSR/Clash/V2ray/Shadowrocket订阅链接地址">8月7日→18.1M/S|2024年最新免费节点SSR/Clash/V2ray/Shadowrocket订阅链接地址</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-3-3-free-v2ray-subscribe.htm" title="3月3日19M/S|V2ray/SSR/Clash/Shadowrocket免费节点每天更新订阅链接">3月3日19M/S|V2ray/SSR/Clash/Shadowrocket免费节点每天更新订阅链接</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-10-29-shadowrocket-node.htm" title="10月29日→22.1M/S|2024年最新免费节点SSR/V2ray/Shadowrocket/Clash订阅链接地址，便宜机场推荐">10月29日→22.1M/S|2024年最新免费节点SSR/V2ray/Shadowrocket/Clash订阅链接地址，便宜机场推荐</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-9-24-shadowrocket-node.htm" title="9月24日→18M/S|2024年最新免费节点V2ray/Shadowrocket/SSR/Clash订阅链接地址">9月24日→18M/S|2024年最新免费节点V2ray/Shadowrocket/SSR/Clash订阅链接地址</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-3-14-free-node-subscribe-links.htm" title="3月14日22.7M/S|V2ray/Clash/Shadowrocket/SSR免费节点每天更新订阅链接">3月14日22.7M/S|V2ray/Clash/Shadowrocket/SSR免费节点每天更新订阅链接</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-8-11-clash-windows.htm" title="8月11日→21M/S|2024年最新免费节点V2ray/Shadowrocket/Clash/SSR订阅链接地址">8月11日→21M/S|2024年最新免费节点V2ray/Shadowrocket/Clash/SSR订阅链接地址</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-8-26-free-v2ray.htm" title="8月26日→22.9M/S|2024年最新免费节点V2ray/Clash/SSR/Shadowrocket订阅链接地址">8月26日→22.9M/S|2024年最新免费节点V2ray/Clash/SSR/Shadowrocket订阅链接地址</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-5-4-clash-node-daily-updates.htm" title="5月4日→22.7M/S|2024年最新免费节点SSR/V2ray/Clash/Shadowrocket订阅链接地址">5月4日→22.7M/S|2024年最新免费节点SSR/V2ray/Clash/Shadowrocket订阅链接地址</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-4-11-shadowrocket-node.htm" title="4月11日→22.4M/S|2024年最新免费节点Shadowrocket/V2ray/SSR/Clash订阅链接">4月11日→22.4M/S|2024年最新免费节点Shadowrocket/V2ray/SSR/Clash订阅链接</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-9-7-free-v2ray-subscribe.htm" title="9月7日→18.7M/S|2024年最新免费节点Clash/Shadowrocket/V2ray/SSR订阅链接地址">9月7日→18.7M/S|2024年最新免费节点Clash/Shadowrocket/V2ray/SSR订阅链接地址</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-7-7-clash-node-daily-updates.htm" title="7月7日→19.5M/S|2024年最新免费节点Shadowrocket/SSR/V2ray/Clash订阅链接地址">7月7日→19.5M/S|2024年最新免费节点Shadowrocket/SSR/V2ray/Clash订阅链接地址</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-5-11-free-clash.htm" title="5月11日→22.4M/S|2024年最新免费节点Shadowrocket/SSR/V2ray/Clash订阅链接地址">5月11日→22.4M/S|2024年最新免费节点Shadowrocket/SSR/V2ray/Clash订阅链接地址</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-4-4-free-clash-subscribe.htm" title="4月4日→21.3M/S|2024年最新免费节点SSR/Shadowrocket/Clash/V2ray订阅链接">4月4日→21.3M/S|2024年最新免费节点SSR/Shadowrocket/Clash/V2ray订阅链接</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-8-6-free-high-speed-nodes.htm" title="8月6日→20.4M/S|2024年最新免费节点V2ray/SSR/Clash/Shadowrocket订阅链接地址">8月6日→20.4M/S|2024年最新免费节点V2ray/SSR/Clash/Shadowrocket订阅链接地址</a></li>
                     </ul>
     </div>
 </div>
@@ -267,7 +267,7 @@
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">20</span> <a href="/date/2024-11/" title="2024-11 归档">2024-11</a></h4>
+                <h4><span class="badge" style="float: right;">21</span> <a href="/date/2024-11/" title="2024-11 归档">2024-11</a></h4>
             </li>
                         <li class="py-2">
                 <h4><span class="badge" style="float: right;">31</span> <a href="/date/2024-10/" title="2024-10 归档">2024-10</a></h4>
